; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_bcm63xx_udc.c_usb_dmas_readl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_bcm63xx_udc.c_usb_dmas_readl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm63xx_udc = type { i64 }

@IUDMA_DMAS_OFFSET = common dso_local global i64 0, align 8
@ENETDMA_CHAN_WIDTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.bcm63xx_udc*, i64, i32)* @usb_dmas_readl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @usb_dmas_readl(%struct.bcm63xx_udc* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.bcm63xx_udc*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.bcm63xx_udc* %0, %struct.bcm63xx_udc** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.bcm63xx_udc*, %struct.bcm63xx_udc** %4, align 8
  %8 = getelementptr inbounds %struct.bcm63xx_udc, %struct.bcm63xx_udc* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @IUDMA_DMAS_OFFSET, align 8
  %11 = add nsw i64 %9, %10
  %12 = load i64, i64* %5, align 8
  %13 = add nsw i64 %11, %12
  %14 = load i32, i32* @ENETDMA_CHAN_WIDTH, align 4
  %15 = load i32, i32* %6, align 4
  %16 = mul nsw i32 %14, %15
  %17 = sext i32 %16 to i64
  %18 = add nsw i64 %13, %17
  %19 = call i64 @bcm_readl(i64 %18)
  ret i64 %19
}

declare dso_local i64 @bcm_readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
